[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/password_dialog.gd" type="Script" id=1]

[node name="PasswordDialog" type="ConfirmationDialog"]
margin_right = 300.0
margin_bottom = 144.0
rect_min_size = Vector2( 300, 70 )
window_title = "Add/Edit Password..."
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 292.0
margin_bottom = 112.0
size_flags_horizontal = 3
columns = 2

[node name="NameLabel" type="Label" parent="GridContainer"]
margin_top = 5.0
margin_right = 82.0
margin_bottom = 24.0
text = "Name: "

[node name="NameLineEdit" type="LineEdit" parent="GridContainer"]
margin_left = 86.0
margin_right = 284.0
margin_bottom = 29.0
size_flags_horizontal = 3
placeholder_text = "Enter display name..."

[node name="UsernameLabel" type="Label" parent="GridContainer"]
margin_top = 38.0
margin_right = 82.0
margin_bottom = 57.0
text = "Username: "

[node name="UsernameLineEdit" type="LineEdit" parent="GridContainer"]
margin_left = 86.0
margin_top = 33.0
margin_right = 284.0
margin_bottom = 62.0
size_flags_horizontal = 3
placeholder_text = "Enter username..."

[node name="PasswordLabel" type="Label" parent="GridContainer"]
margin_top = 71.0
margin_right = 82.0
margin_bottom = 90.0
text = "Password: "

[node name="PasswordLineEdit" type="LineEdit" parent="GridContainer"]
margin_left = 86.0
margin_top = 66.0
margin_right = 284.0
margin_bottom = 95.0
size_flags_horizontal = 3
placeholder_text = "Enter password..."

[connection signal="confirmed" from="." to="." method="_on_confirmed"]
